# socketcand_translate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml  release.yml
components/esp_canard/: CMakeLists.txt
components/esp_canard/include/: _canard_cavl.h
components/esp_nunavut/: CMakeLists.txt  recompile_dsdl.sh
components/esp_nunavut/nunavut/nunavut/support/: serialization.h
components/esp_nunavut/nunavut/uavcan/_register/: Access_1_0.h  List_1_0.h  Name_1_0.h  Value_1_0.h
components/esp_nunavut/nunavut/uavcan/diagnostic/: Record_1_0.h  Record_1_1.h  Severity_1_0.h
components/esp_nunavut/nunavut/uavcan/file/: Error_1_0.h  GetInfo_0_1.h  GetInfo_0_2.h  List_0_1.h  List_0_2.h  Modify_1_0.h  Modify_1_1.h  Path_1_0.h  Path_2_0.h  Read_1_0.h  Read_1_1.h  Write_1_0.h  Write_1_1.h
components/esp_nunavut/nunavut/uavcan/node/: ExecuteCommand_1_0.h  ExecuteCommand_1_1.h  ExecuteCommand_1_2.h  GetInfo_1_0.h  (+8 more)
components/esp_o1heap/: CMakeLists.txt
espsocketcand/: espcsocketcand.ino
main/: CMakeLists.txt  can_listener.c  can_listener.h  cyphal_node.c  cyphal_node.h  discovery_beacon.c  discovery_beacon.h  driver_setup.c  driver_setup.h  frame_io.c  frame_io.h  http_server.c  http_server.h  idf_component.yml  main.c  persistent_settings.c  persistent_settings.h  socketcand_server.c  socketcand_server.h  socketcand_translate.c  socketcand_translate.h  status_report.c  status_report.h
main/website/: index.html  script.js
socketcand_translate/: README.txt  socketcand_translate.cpp  socketcand_translate.h
(+213 files in other folders)
